tests/success/match_if_in_comma_expr.bz
function main()
{
	const _ = (0, if (false) { 0 } else { 0 });
}
